# estimate_download_costs

./: .gitignore  LICENSE  README.md  abuse.py  bots.py  cost_model.py  defaults.py  demand.py  demand_report.py  estimate_cli.py  estimate_report.py  export_csv.py  export_static_csv.py  geo.py  main.py  parser.py  pdf_report.py  pricing_cli.py  projection.py  pyproject.toml  report.py  report_cli.py  static_cli.py  static_demand.py  static_paths.py  static_report.py  watch.example.yaml  watch_cli.py
.github/workflows/: ci.yml
docs/: diagnostic-runbook.md
pricing/: aws_offers.py  eu-south-2.json  generate.py  loader.py  schema.py  tiers.py
pricing/templates/: eu-south-2.json
tests/: conftest.py  test_abuse.py  test_aws_offers.py  test_consolidate.py  test_cost_model.py  test_defaults.py  test_demand.py  test_estimate_cli.py  test_geo.py  test_parser.py  test_pricing.py  test_pricing_generate.py  test_ruleset_report.py  test_watch_filters.py
watch/: blocking.py  config.py  config_loader.py  country_blocks.py  country_blocks_export.py  iptables_consolidate.py  live_display.py  nftables_ruleset.py  ruleset_report.py  snapshot.py  subnet.py
